--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "RAP.node",
   "main": "server.js",
   "dependencies": {
-    "express": "~4.0.0",
+    "aglio": "^1.14.0",
     "body-parser": "~1.0.1",
-    "aglio": "^1.14.0"
+    "express": "~4.0.0",
+    "require": "^0.5.0"
   }
 }
