--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
   "name": "RAP.node",
+  "version": "0.0.1",
+  "license": "none",
+  "description": "RAP node",
+  "author": "Bosn Ma",
+  "node": "0.10.31",
   "main": "server.js",
+  "scripts": {
+    "start": "server.js"
+  },
   "dependencies": {
     "aglio": "^1.14.0",
+    "async": "^0.9.0",
     "body-parser": "~1.0.1",
     "express": "~4.0.0",
     "request": "^2.40.0",
