--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
-  "name": "rap",
-  "version": "0.11.0",
-  "description": "RAP is a GUI web interface structure management system. ",
-  "main": "index.js",
+  "name": "RAP.node",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/thx/RAP.node.git"
-  },
-  "keywords": [
-    "rap"
-  ],
-  "author": "Bosn",
-  "license": "",
-  "bugs": {
-    "url": "https://github.com/thx/RAP.node/issues"
-  },
-  "homepage": "https://github.com/thx/RAP.node"
+  "dependencies": {
+    "body-parser": "~1.8.1",
+    "cookie-parser": "~1.3.3",
+    "debug": "~2.0.0",
+    "express": "~4.9.0",
+    "jade": "~1.6.0",
+    "morgan": "~1.3.0",
+    "mysql": "^2.5.2",
+    "serve-favicon": "~2.1.3"
+  }
 }
